Revision 572:
fix
-Elroki , ToIVortex , Pagan , Oracle teleporters.
-shop distance(sell-buy) bug, thanks to exclusive for report.
-Monster Derby Track teleport. thanks to lorka for report.
-MissQueen multisell coupon. thanks to lorka for report.
-Olympiad spectator error thanks to magister for report.
-Quest ShowResult replace objId instead name.
-html over 200++ corrections typo - bypass.
-(Custom config) DAGGERS-ARCHERS wear HEAVY-LIGHT on use item 
unequip equipped item if config is false , to avoid stuck , thanks to
exclusive for report.
-Npe on connection close , thanks to exclusive for report.
-Herbs auto destroy , thanks to exclusive for report.

Spawn:
-Implement L2off spawn data and territory system.
-xml spawn list added inside datapack data/xml/spawn.
-Sql spawn list has been merged with new spawn system and manage only
the custom admin //spawn.
-Territory Monsters randomly spawn in their territory.
-Shift click on monters -> "visual" will allow you to check their
territory.

Skill fix:
-fixed all chance skills.

Optimize:
-NpcData.java
-PetNameTable
-Siege(tasks - sql connection)

Implement:
-Server-Player Variable
-ClientSetTime packet.
-AttackDeadTarget packet.
-AttackinCoolTime packet.
-AttackOutOfRange packet.

Rework:
-L2BossSpawnInstance

Clean up - Delete:
-remove L2ProtectorInstance.
-remove unused configs.
-remove AdminUnblockIp.
-remove VipTeleportCmd.
-AdminCommands.xml clean up. 

Organization:
-AutoSpawnHandler,L2Spawn,SpawnData,SpawnTerritory 
moved inside gameserver.model.spawn .

Dont forget: to update your databse and use geodata!!! is important for
the new spawn system!